logs/simple-slack-bot.log
Listing '.'...
Listing './bin'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simple_slack_bot'...
Compiling './lib/python3.5/site-packages/simple_slack_bot/example_component.py'...
***   File "./lib/python3.5/site-packages/simple_slack_bot/example_component.py", line 9
    simple_slack_bot._logger.info(f"ExampleComponent.hello_callback got request {request}")
                                                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/simple_slack_bot/simple_slack_bot.py'...
***   File "./lib/python3.5/site-packages/simple_slack_bot/simple_slack_bot.py", line 29
    self._logger.info(f"set bot id to {self._BOT_ID}")
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/simple_slack_bot/slack_request.py'...
***   File "./lib/python3.5/site-packages/simple_slack_bot/slack_request.py", line 46
    print(f"writing {content} to {channel}")
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/simple_slack_bot-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/slacker'...
Listing './lib/python3.5/site-packages/slacker-0.9.60.egg-info'...
Listing './lib/python3.5/site-packages/slacksocket'...
Compiling './lib/python3.5/site-packages/slacksocket/map.py'...
***   File "./lib/python3.5/site-packages/slacksocket/map.py", line 5
    import .errors
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/slacksocket-0.9.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket_client-0.46.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
